# HwEmulator

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/lmy/emulator/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/lmy/emulator/sample/: MainActivity.kt
app/src/main/java/com/lmy/sample/emulator/: MainActivity.kt  MyApplication.kt
app/src/main/java/com/lmy/sample/emulator/ui/: GameActivity.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/xml/: provider_paths.xml
app/src/test/java/com/lmy/emulator/: ExampleUnitTest.kt
hwemulator/: CMakeLists.txt  build.gradle
hwemulator/src/androidTest/java/com/lmy/emulator/: ExampleInstrumentedTest.java
hwemulator/src/main/: AndroidManifest.xml
hwemulator/src/main/cpp/hwemulatorbase/: CMakeLists.txt
hwemulator/src/main/cpp/hwemulatorbase/entity/: HwGamePadEvent.cpp  HwGamepadEvent.cpp
hwemulator/src/main/cpp/hwemulatorbase/include/: HwGamePadEvent.h  HwGamepadEvent.h
hwemulator/src/main/cpp/native/: CMakeLists.txt  Java_HwEmulator.cpp
hwemulator/src/main/cpp/native/entity/: Java_HwGamePadEvent.cpp
hwemulator/src/main/cpp/nes/: CMakeLists.txt  HwNESEmulator.cpp  Test.cpp  mapper-inc.py
hwemulator/src/main/cpp/nes/include/: HwNESEmulator.h  Test.h
hwemulator/src/main/cpp/nes/infones/: InfoNES.h  InfoNES_INC.h  InfoNES_System.h
hwemulator/src/main/cpp/nes/infones/android/: InfoNES_System_Android.cpp
hwemulator/src/main/cpp/nes/infones/mapper/: InfoNES_Mapper_001.cpp
hwemulator/src/main/cpp/nes/infones/ppc2003/: InfoNES2003.rc  InfoNES2003.vcp  InfoNES_System_ppc2003.cpp  readme.html  resource.h
hwemulator/src/main/cpp/nes/infones/zaurus/: InfoNES.desktop  zfileselector.cpp  zfileselector.h  zinfones.h
hwemulator/src/main/cpp/sdl1x/: CMakeLists.txt
hwemulator/src/main/cpp/sdl2/: CMakeLists.txt
hwemulator/src/main/java/com/lmy/emulator/: HwEmulator.kt
hwemulator/src/main/java/com/lmy/emulator/entity/: HwGamePadEvent.kt  HwRegion.kt
hwemulator/src/main/java/com/lmy/emulator/widget/: FCGamePadView.kt  GamePadView.kt
hwemulator/src/main/res/values/: strings.xml
hwemulator/src/test/java/com/lmy/emulator/: ExampleUnitTest.java
